# package-manager

./: Cargo.toml  README.md  justfile
examples/manifests/: bat-gnu.toml
examples/recipes/: bat-static.toml  bat.recipe.toml  bat.toml  glibc.toml  libgcc.toml  libgit2.toml  package-manager.toml  sl.recipe.toml
src/: arguments.rs  build.rs  build_plan.rs  dependencies.rs  directories.rs  download.rs  find_recipe.rs  fs.rs  install.rs  internal_error.rs  ledger.rs  lib.rs  main.rs  manifest.rs  package_set.rs  path.rs  prepare_install.rs  prepare_to_install.rs  recipe.rs  recipe_set.rs  result.rs  serde.rs  staging.rs  state.rs  version.rs
src/directories/: host.rs  mod.rs  target.rs
src/download/: git.rs  index.rs  mod.rs  tar.rs
src/recipe/: build.rs  directories.rs  download.rs  mod.rs
src/version/: mod.rs  requirement.rs  resolver.rs  semantic.rs
ui-tests/: .gitignore  justfile
ui-tests/bat-gnu/config/package-manager/: manifest.toml
ui-tests/recipes/: bat-gnu.toml  bat-static.toml  libgcc.toml  libgit2.toml  package-manager.toml
