[package]
name = "package-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bstr = "1.12.1"
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"
fs-err = "3.3.0"
gix = { version = "0.84.0", features = ["blocking-http-transport-reqwest-rust-tls"] }
semver = { version = "1.0.28", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = { version = "1.1.2", features = ["preserve_order"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
